PA5/tests/negative-examples/substringStartsNegative.cl
class Main inherits IO {
  main() : Object { 
    "hello whirled".substr(0 - 2, 5)
  } ;
} ; 
